--- a/css/styles.css
+++ b/css/styles.css
@@ -45,11 +45,9 @@ fieldset {
     margin: 0 auto;
 }
 
-.container.is-flex {
+.is-flex {
     display: flex;
     margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
     width: 1158px;
     justify-content: space-between;
 }
@@ -106,19 +104,13 @@ fieldset {
 .header {
     border-bottom: 1px solid #e7e9fc;
     display: flex;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding: 16px;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.page-nav {
-    display: flex;
-    align-items: center;
+    margin: 0 auto;
 }
 
 .ul-nav {
-    display: flex;
-    gap: 40px;
+    display: none;
 }
 
 .link-logo-nav {
@@ -129,7 +121,6 @@ fieldset {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    margin-right: 76px;
 }
 
 .link-logo-footer {
@@ -200,7 +191,7 @@ fieldset {
 }
 
 .address {
-    font-style: normal;
+    display: none;
 }
 
 .link-address {
@@ -217,6 +208,18 @@ fieldset {
 .link-address:hover,
 .link-address:focus {
     color: #404bbf;
+}
+
+.menu-icon {
+    fill: #2F2F37;
+}
+
+.menu-open-btn {
+    border: none;
+    background-color: transparent;
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
 }
 
 .section-header-one {
@@ -848,6 +851,52 @@ fieldset {
         max-width: 768px;
     }
 
+    .header {
+        display: flex;
+        max-width: 768px;
+    }
+
+    .ul-nav {
+        display: flex;
+        gap: 40px;
+    }
+
+    .ul-nav:not(:first-child) {
+        
+    }
+
+    .address {
+        display: flex;
+        font-style: normal;
+    }
+
+    .is-flex {
+        display: flex;
+        margin: 0 auto;
+        width: 1158px;
+        justify-content: space-between;
+    }
+
+    .page-nav {
+        display: flex;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .ul-nav-address {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .link-logo-nav {
+        margin-right: 80px;
+    }
+
+    .menu-open-btn {
+        display: none;
+    }
+
     .section-header-one {
         padding-top: 112px;
         padding-bottom: 112px;
@@ -931,6 +980,41 @@ fieldset {
         padding-right: 15px;
         column-gap: 24px;
         row-gap: 48px;
+    }
+
+    .header {
+        display: flex;
+        padding: 24px 16px;
+        max-width: 1158px;
+    }
+
+    .ul-nav {
+        gap: 40px;
+    }
+
+    .ul-nav-address {
+        display: flex;
+        flex-direction: row;
+        gap: 40px;
+    }
+
+    .address {
+        font-style: normal;
+    }
+
+    .is-flex {
+        display: flex;
+        margin: 0 auto;
+        width: 1158px;
+        justify-content: space-between;
+    }
+
+    .link-logo-nav {
+        margin-right: 36px;
+    }
+
+    .menu-open-btn {
+        display: none;
     }
 
     .section-header-one {
