--- a/css/styles.css
+++ b/css/styles.css
@@ -543,7 +543,7 @@ fieldset {
 }
 
 .modal {
-    width: 408px;
+    width: 288px;
     min-height: 584px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
@@ -971,6 +971,10 @@ fieldset {
     .form-footer {
         flex-direction: row;
     }
+
+    .modal {
+        width: 408px;
+    }
 }
 
 @media screen and (min-width: 1158px) {
@@ -1122,4 +1126,7 @@ fieldset {
         margin-right: 40px;
     }
 
+    .modal {
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
