--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,6 @@ fieldset {
 .container-footer {
     max-width: 1158px;
     display: flex;
-    max-width: 1158px;
     margin: 0 auto;
     gap: 72px;
     flex-direction: column;
@@ -151,7 +150,6 @@ fieldset {
     background-color: #ffffff;
     opacity: 0;
     visibility: hidden;
-    pointer-events: none;
 }
 
 .menu-close-btn {
@@ -552,6 +550,7 @@ fieldset {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
 
 .backdrop {
@@ -866,7 +865,12 @@ fieldset {
 
 .div-subscribe {
     width: 288px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
 }
+
 
 
 @media screen and (min-width: 768px) {
